--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,19 @@
     border: 2px solid black;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 576px) {
+    .container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.parent .child{
+    font-size: 2em;
+}
